linking other files

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Live Hart</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
+<div class="heart"></div>
+
+<script src="js/script.js"></script>
 </body>
 </html>
